add bootstrap to main

--- a/templates/anom/layout.html
+++ b/templates/anom/layout.html
@@ -8,11 +8,33 @@ $def with( content )
     <meta name="description" content="Job-O-Rama example">
     <meta name="author" content="Luis Cabellos">
 
+    <!-- Le styles -->
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <style>
+      body { padding-top: 60px; /* space for topbar */ }
+    </style>
+    <link href="../static/css/bootstrap-responsive.css" rel="stylesheet">
+
     <link rel="shortcut icon" href="/static/favicon.ico">
   
   </head>
 
   <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="/">Job-O-Rama</a>
+          <div>
+            <ul class="nav">
+              <li><a href="/">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
 
     $:content
 
