--- a/templates/anom/layout.html
+++ b/templates/anom/layout.html
@@ -28,8 +28,8 @@ $def with( content )
           <div>
             <ul class="nav">
               <li><a href="/">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="/about">About</a></li>
+              <li><a href="/about#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
