--- a/templates/anom/about.html
+++ b/templates/anom/about.html
@@ -1,5 +1,40 @@
 <div class="container">
 
-  GET Anonymous about
+  <div class="hero-unit">
+    <h1>About</h1>
+    <p>This is a template for a simple web service for Job launching using a
+    Supercomputer. This template is created for the groups at the University of
+    Cantabria that used the Supercomputer ALTAMIRA. This works is done by the
+    Advanced Computing & e-Science Research group at IFCA</p>
+  </div>
+
+  <div class="row">
+    <h1 id="contact">Contact</h1>
+    <div class="span6">
+      <h2>IFCA</h2>
+      <p>Advanced Computing & e-Science Research Line at IFCA.</p>
+      <p><a class="btn" href="https://moin.ifca.es/wiki/Home">Advanced Computing
+      & e-Science Research &raquo;</a></p>
+      <p><a class="btn" href="http://www.ifca.es/">IFCA &raquo;</a></p>
+    </div>
+    <div class="span6">
+      <h2>Servicio Santander Supercomputacion</h2>
+      <p>Servicio Santander Supercomputación (SSC) makes available to
+      researchers at the University of Cantabria and Spain High Performance
+      Computing resources, both for processing time, networking and storage. SSC
+      is capable of tackling complex simulations or process large volumes of
+      data.</p>
+      <p><a class="btn"
+      href="http://www.unican.es/WebUC/Unidades/Investigacion/scti/ssc/">Servicio
+      Santander de Supercomputación &raquo;</a></p>
+    </div>
+  </div>
+
+  <hr>
+
+  <footer>
+    <p>&copy; IFCA 2013</p>
+  </footer>
+
 
 </div> <!-- /container -->
