add js in anom layout

--- a/templates/anom/layout.html
+++ b/templates/anom/layout.html
@@ -38,5 +38,9 @@ $def with( content )
 
     $:content
 
+    <!-- Le javascript -->
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+
   </body>
 </html>
