add logout link

--- a/templates/logged/layout.html
+++ b/templates/logged/layout.html
@@ -31,12 +31,19 @@ $def with( content )
               <li><a href="/about">About</a></li>
               <li><a href="/about#contact">Contact</a></li>
             </ul>
+            <ul class="nav pull-right">
+              <li><a href="/logout">Logout</a></li>
+            </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
 
     $:content
+
+    <!-- Le javascript -->
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
   </body>
 </html>
