--- a/templates/anom/login_error.html
+++ b/templates/anom/login_error.html
@@ -13,15 +13,21 @@
         </div>
       </div>
       <div class="control-group">
-        <label class="control-label" for="inputEmail">Username</label>
+        <label class="control-label" for="inputUser">Username</label>
         <div class="controls">
-          <input type="text" name="user" placeholder="Username" />
+          <div class="input-prepend">
+            <span class="add-on"><i class="icon-user"></i></span>
+            <input type="text" name="user" placeholder="Username" />
+          </div>
         </div>
       </div>
       <div class="control-group">
-        <label class="control-label" for="inputEmail">Password</label>
+        <label class="control-label" for="inputPasswd">Password</label>
         <div class="controls">
-          <input type="password" name="passwd" placeholder="Password" />
+          <div class="input-prepend">
+            <span class="add-on"><i class="icon-asterisk"></i></span>
+            <input type="password" name="passwd" placeholder="Password" />
+          </div>
         </div>
       </div>
       <div class="control-group">
