place holder of filelist

--- a/templates/logged/main.html
+++ b/templates/logged/main.html
@@ -2,10 +2,11 @@
 
   <div class="row-fluid show-grid">
     <div class="well well-small span3">
-      Files
+      <h4>Files</h4>
+      <ul id="filelist" />
     </div>
     <div class="well well-small span3">
-      Jobs
+      <h4>Jobs</h4>
     </div>
     <div class="span6">
       <div class="well well-large">
