--- a/templates/anom/login_error.html
+++ b/templates/anom/login_error.html
@@ -1,41 +1,43 @@
-<div class="container">
-
-  <div class="span6 offset3 alert alert-error">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    Loggin Error!
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span6 offset3 alert alert-error">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      Loggin Error!
+    </div>
   </div>
 
-  <div class="span6 offset3">
-    <form class="form-horizontal" action="/login" method="POST">
-      <div class="control-group">
-        <div class="controls">
-          <h3>Please sign in</h3>
-        </div>
-      </div>
-      <div class="control-group">
-        <label class="control-label" for="inputUser">Username</label>
-        <div class="controls">
-          <div class="input-prepend">
-            <span class="add-on"><i class="icon-user"></i></span>
-            <input type="text" name="user" placeholder="Username" />
+  <div class="row-fluid">
+    <div class="span6 offset3">
+      <form class="form-horizontal" action="/login" method="POST">
+        <div class="control-group">
+          <div class="controls">
+            <h3>Please sign in</h3>
           </div>
         </div>
-      </div>
-      <div class="control-group">
-        <label class="control-label" for="inputPasswd">Password</label>
-        <div class="controls">
-          <div class="input-prepend">
-            <span class="add-on"><i class="icon-asterisk"></i></span>
-            <input type="password" name="passwd" placeholder="Password" />
+        <div class="control-group">
+          <label class="control-label" for="inputUser">Username</label>
+          <div class="controls">
+            <div class="input-prepend">
+              <span class="add-on"><i class="icon-user"></i></span>
+              <input type="text" name="user" placeholder="Username" />
+            </div>
           </div>
         </div>
-      </div>
-      <div class="control-group">
-        <div class="controls">
-          <button class="btn btn-primary" type="submit">Sign In</button>
+        <div class="control-group">
+          <label class="control-label" for="inputPasswd">Password</label>
+          <div class="controls">
+            <div class="input-prepend">
+              <span class="add-on"><i class="icon-asterisk"></i></span>
+              <input type="password" name="passwd" placeholder="Password" />
+            </div>
+          </div>
         </div>
-      </div>
-    </form>
+        <div class="control-group">
+          <div class="controls">
+            <button class="btn btn-primary" type="submit">Sign In</button>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
-
 </div> <!-- /container -->
