add file list to job form

--- a/templates/logged/main.html
+++ b/templates/logged/main.html
@@ -32,6 +32,26 @@
 
       <div class="well well-large">
         <h3>New Job</h3>
+        <form id="jobform" class="form-horizontal">
+          <div class="control-group">
+            <label class="control-label" for="inputVar1">Variable 1</label>
+            <div class="controls">
+              <input type="text" name="var1" placeholder="Variable 1" />
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label" for="inputFile">Input File</label>
+            <div class="controls">
+              <span id="jobfile" ></span>
+            </div>
+          </div>
+          <div class="control-group">
+            <div class="controls">
+              <a id="jobstart" class="btn btn-primary" >
+                <i class="icon-play"></i> Start</a>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
