--- a/templates/logged/main.html
+++ b/templates/logged/main.html
@@ -7,6 +7,7 @@
     </div>
     <div class="well well-small span3">
       <h4>Jobs</h4>
+      <ul id="joblist" />
     </div>
     <div class="span6">
       <div class="well well-large">
