--- a/templates/logged/main.html
+++ b/templates/logged/main.html
@@ -19,7 +19,7 @@
             <input id="filename" class="input-large" type="text" />
             <a id="filebrowse" class="btn">Browse</a>
             <a id="filesend" class="btn btn-primary" >
-              <i class="icon-upload"></i> Send</a>
+              <i class="icon-upload icon-white"></i> Send</a>
           </div>
         </form>
 
@@ -49,7 +49,7 @@
           <div class="control-group">
             <div class="controls">
               <a id="jobstart" class="btn btn-primary" >
-                <i class="icon-play"></i> Start</a>
+                <i class="icon-play icon-white"></i> Start</a>
             </div>
           </div>
         </form>
